# alouette-studio

./: .gitignore  .prototools  .taurignore  CLAUDE.md  Cargo.toml  Makefile  README.md  README_PingZero.md  ddg_lite.html  download_chrome.py  extract.py  fix.js  fix_docker.py  flutter_rust_bridge.yaml  git_diff_admin.txt  original.tsx  original_with_lines.txt  scratch.rs  scratch2.rs  strip.py  test_browser.rs
core_engine/: Cargo.toml  build.rs
core_engine/app_data/: alouette.db  cloudflare_config.yml
core_engine/src/: cloudflared_manager.rs  config.rs  db.rs  db_backup.rs  error.rs  lib.rs  monitor.rs  process.rs  proto_manager.rs  rewrite_db.py  settings.rs  workspace_manager.rs
core_engine/src/agent_harness/: autonomous.rs  compaction.rs  hooks.rs  memory.rs  mod.rs  parser.rs  plan.rs  sandbox.rs  self_heal.rs  session.rs  skills.rs  telemetry.rs  tool_definitions.rs
core_engine/src/agent_harness/prompts/: identity.txt  tools.txt
core_engine/src/agent_tools/: browser_control.rs  devtool_stream.rs  mod.rs  mouse_control.rs  screen_parser.rs
core_engine/src/code_rag/: db.rs  embedding.rs  extractor.rs  indexer.rs  language_resolver.rs  languages.rs  mod.rs  normalizer.rs  parser.rs  query.rs  seed.rs  tier.rs
core_engine/src/code_rag/queries/cpp/: functions.scm
core_engine/src/code_rag/queries/csharp/: functions.scm
core_engine/src/code_rag/queries/go/: functions.scm
core_engine/src/code_rag/queries/java/: functions.scm
core_engine/src/code_rag/queries/javascript/: functions.scm
core_engine/src/code_rag/queries/python/: docstring.scm  functions.scm
core_engine/src/code_rag/queries/ruby/: functions.scm
core_engine/src/code_rag/queries/rust/: functions.scm
core_engine/src/code_rag/queries/typescript/: functions.scm
core_engine/src/db/: manager.rs  mod.rs  models.rs  traits.rs  transaction.rs
core_engine/src/db/repositories/: mod.rs  project_repo.rs
core_engine/src/docker_engine/: client.rs  container.rs  logs.rs  mod.rs  stats.rs  terminal.rs
core_engine/src/extension_manager/: manager.rs  manifest.rs  marketplace.rs  mod.rs  protocol.rs  wasm_engine.rs
core_engine/src/memory_inspector/: fault_tolerance.rs  manager.rs  mod.rs  models.rs  pipeline.rs
core_engine/src/memory_inspector/container/: docker.rs  mod.rs
core_engine/src/memory_inspector/mock/: injector.rs  mod.rs
core_engine/src/memory_inspector/profiling/: analyzer.rs  ebpf_tracer.rs  mod.rs
core_engine/src/memory_inspector/stress/: fuzzer.rs  mod.rs  ramp_down.rs
core_engine/src/monitor/: circuit_breaker.rs  watchdog.rs
core_engine/src/process/: details.rs  executor.rs  logging.rs  manager.rs  mod.rs  models.rs  network_isolate.rs  network_simulate_proxy.rs  terminal.rs  tree.rs
core_engine/src/process/sandbox/: engine.rs  interceptor.rs  linux.rs  macos.rs  mod.rs  windows.rs
core_engine/src/process/sandbox/interceptor/: mod.rs
core_engine/src/vm_engine/: advanced.rs  config.rs  device.rs  kvm_core.rs  manager.rs  mod.rs  qemu_wrapper.rs  qga_client.rs  qmp_client.rs  vcpu.rs
docs/: README.md  cloudflared_tunnels.md  frontend_state.md  interactive_terminals.md  process_lifecycle.md  proto_toolchain.md  resource_monitoring.md  sqlite_storage.md
flutter_app/: README.md  pubspec.yaml
flutter_app/android/: local.properties
flutter_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
flutter_app/ios/Flutter/ephemeral/: flutter_native_integration.env
flutter_app/lib/: main.dart
flutter_app/lib/src/: app.dart
flutter_app/lib/src/components/: admin_panel.dart  ai_agent.dart  cloudflare_tunnel.dart  code_editor.dart  config_setup.dart  environment_setup.dart  file_explorer.dart  git_panel.dart  header.dart  mini_postman.dart  process_manager.dart  project_resources.dart  sqlite_editor.dart  tab_list.dart  welcome_page.dart  (+2 more)
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: my_application.cc
flutter_app/rust/: Cargo.toml
flutter_app/rust/src/: frb_generated.rs
flutter_app/rust/src/api/: agent.rs  alouette_open.rs  cloudflare.rs  code_rag.rs  config.rs  files.rs  git.rs  language.rs  local_chat.rs  mod.rs  network.rs  process.rs  sandbox.rs  settings.rs  sqlite.rs  terminal.rs  windows.rs
flutter_app/test/: widget_test.dart
scripts/: dev.sh  download_embedding_model.sh  generate_icons.js  generate_icons.py  preprocess_rag_data.py  test_code_rag.sh
tauri_app/: .taurignore  fix_colors.py  fix_dropdown.py  fix_multi_agent.py  fix_remaining.py  package-lock.json  remove_frame.py
tauri_app/src-tauri/: .prototools  .taurignore  Cargo.toml  tauri.conf.json  test_response.rs
tauri_app/src-tauri/capabilities/: default.json
tauri_app/src-tauri/core_engine/app_data/: cloudflare_config.yml
tauri_app/src-tauri/icons/: icon.icns
tauri_app/src-tauri/logs/agent_audit/: telemetry.jsonl
tauri_app/src-tauri/src/: ai_diagnostics.rs  alouette_open.rs  events.rs  inference.rs  main.rs  minicpm.rs  model_manager.rs  state.rs  system_manager.rs
tauri_app/src-tauri/src/ai_manager/: config_storage.rs  llama_cpp.rs  mod.rs  ollama.rs  onnx_ort.rs  python_env.rs  python_ffi.rs  server.rs
tauri_app/src-tauri/src/commands/: agent.rs  browser.rs  cloudflare.rs  code_rag.rs  database.rs  db_duckdb.rs  db_kv.rs  db_mongo.rs  docker.rs  extension.rs  file_watcher.rs  files.rs  git.rs  git_diff.rs  grpc.rs  langchain_rig_bridge.rs  language.rs  load_test.rs  local_chat.rs  marketplace_cmds.rs  mod.rs  multi_agent.rs  network.rs  oauth.rs  process.rs  rig_bridge.rs  sandbox.rs  settings.rs  sqlite.rs  sse.rs  terminal.rs  vm.rs  websocket.rs
tauri_app/src-tauri/src/commands/memory_inspector/: actions.rs  events.rs
tauri_app/ui/: index.html  package-lock.json  package.json  test_icon.tsx  vite.config.ts
tauri_app/ui/src/: App.tsx  constants.ts  index.css  main.tsx  test_ime.html
(+113 files in other folders)
