[package]
name = "core_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
sysinfo = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"
bytes = "1.11"
flate2 = "1.0"
tar = "0.4"
zip = "8.6"
portable-pty = "0.9"
fs_extra = "1.3"
async-trait = "0.1"
directories = "6.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "jobapi2", "handleapi"] }


