[package]
name = "core_engine"
version = "0.1.0"
edition = "2021"

[features]
tree-sitter = []

[dependencies]
tokio = { version = "1.52", features = ["full"] }
sysinfo = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"
bytes = "1.11"
flate2 = "1.0"
tar = "0.4"
zip = "8.6"
portable-pty = "0.9"
fs_extra = "1.3"
async-trait = "0.1"
directories = "6.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "jobapi2", "handleapi"] }
rand = "0.8"
serde_yaml = "0.9"
libc = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
regex = "1"
tempfile = "3"
lru = "0.12"
tract-onnx = "0.23.0"
tokenizers = "0.21"
bollard = "0.17"
lazy_static = "1.4.0"

# rust-vmm dependencies
kvm-ioctls = "0.19.0"
kvm-bindings = "0.10.0"
vmm-sys-util = "0.12.0"
base64 = "0.22"
