[package]
name = "alouette_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
flutter_rust_bridge = "=2.12.0"
core_engine = { path = "../../core_engine" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

[lib]
crate-type = ["cdylib", "staticlib"]
