[package]
name = "tauri_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = ["unstable", "tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
core_engine = { path = "../../core_engine" }
chrono = "0.4"
base64 = "0.21"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "multipart", "cookies"] }
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
regex-lite = "0.1"
url = "2"
quick-xml = "0.31"
jsonschema = "0.18"




[build-dependencies]
tauri-build = { version = "2.0", features = [] }
