[package]
name = "alouette-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.11.2", features = ["unstable", "tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.52", features = ["full"] }
core_engine = { path = "../../core_engine" }
chrono = "0.4"
base64 = "0.22"
rusqlite = { version = "0.39.0", features = ["bundled"] }
reqwest = { version = "0.13", features = ["json", "multipart", "cookies"] }
sha2 = "0.11"
sha1 = "0.11"
md5 = "0.8"
regex-lite = "0.1"
url = "2"
quick-xml = "0.40"
jsonschema = "0.46"
tract-onnx = "0.23.0"
rig-core = { version = "0.38", features = ["derive"] }
futures-util = "0.3.32"
r2d2 = "0.8"
r2d2_sqlite = "0.34.0"
secrecy = { version = "0.8", features = ["serde"] }
dashmap = "6.1"
notify = { version = "7.0", features = ["macos_fsevent"] }
git2 = "0.19"
pathdiff = "0.2"
rfd = "0.17.2"




[build-dependencies]
tauri-build = { version = "2.6", features = [] }
