[package]
name = "alouette-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.11.2", features = ["unstable", "tray-icon", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.52", features = ["full"] }
core_engine = { path = "../../core_engine" }
bollard = "0.17"

rand = "0.8"
image = "0.24"
chrono = "0.4"
uuid = { version = "1.0", features = ["serde", "v4"] }
base64 = "0.22"
rusqlite = { version = "0.29.0", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "mysql", "postgres", "sqlite", "chrono", "uuid"] }
mongodb = { version = "3.1.0", features = ["rustls-tls"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
tiberius = "0.12"
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.12", features = ["json", "multipart", "cookies", "stream"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
reqwest-eventsource = "0.6.0"
oauth2 = "4.4"
webbrowser = "1.0"
tonic = "0.11"
prost = "0.12"
prost-reflect = "0.13"
sha2 = "0.11"
sha1 = "0.11"
md5 = "0.8"
regex-lite = "0.1"
url = "2"
quick-xml = "0.40"
jsonschema = "0.46"
rig-core = { version = "0.38", features = ["derive"] }
langchain-rust = "4.4.0"
async-trait = "0.1"
futures-util = "0.3.32"
r2d2 = "0.8"
r2d2_sqlite = "0.22.0"
secrecy = { version = "0.8", features = ["serde"] }
dashmap = "6.1"
notify = { version = "7.0", features = ["macos_fsevent"] }
git2 = "0.19"
pathdiff = "0.2"
rfd = "0.17.2"

lazy_static = "1.4"
axum = "0.7"
thiserror = "1.0"
anyhow = "1.0"

# Embedded DBs
sled = "0.34"
redb = "2.0"
duckdb = { version = "1.0", features = ["bundled"] }
surrealdb = "2.0"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }
